--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1734,8 @@
       " 1 0 1 0 0 0 0 1 1 0 1 0 0 0 0 1 0 1 0 1 0 0 1 0 0 1 0 0 0 1 0 0 0 0 1 1 0\n",
       " 1 1 0 0 0 0 0 0 0 0 1 1 1 0 1 1 0 0 0 0 0 1 1 0 1 1 0 0 0 1 0 0 0 0 0 0 0\n",
       " 0 1 0 1 1 0 1 0 0 1 0 1 1 0 1 0 0 0 0 0 0 1 0 1 0 1 1 0 1 0 0 1 0 0 0 1 0\n",
-      " 0 0]\n"
+      " 0 0]\n",
+      "MAE for Random Forest: 0.0\n"
      ]
     }
    ],
@@ -1744,7 +1745,8 @@
     "pred_rn_forest = rn_forest_model.predict(val_X)\n",
     "\n",
     "print(val_y)\n",
-    "print(pred_rn_forest)"
+    "print(pred_rn_forest)\n",
+    "print(\"MAE for Random Forest: {0}\".format(mean_absolute_error(val_y, pred_rn_forest)))"
    ]
   },
   {
